Add initial implementation of the ControlFlowGraph. It is reimplementation of the old craft we used to have.
We have set up the basic infrastructure of testing and verification of the CFG
construction.

Note that:
*The new implementation doesn't include CFG of the exception instructions.*

--- a/SolidOpt/trunk/src/Services/Transformations/CodeModel/ControlFlowGraph/SolidOpt.Services.ControlFlowGraph.Test.csproj
+++ b/SolidOpt/trunk/src/Services/Transformations/CodeModel/ControlFlowGraph/SolidOpt.Services.ControlFlowGraph.Test.csproj
@@ -49,8 +49,12 @@
       <Project>{D68133BD-1E63-496E-9EDE-4FBDBF77B486}</Project>
       <Name>Mono.Cecil</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\vendors\NUnit\src\NUnitFramework\framework\nunit.framework.csproj">
+      <Project>{83DD7E12-A705-4DBA-9D71-09C8973D9382}</Project>
+      <Name>nunit.framework</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="System.Core" />
+    <Reference Include="System" />
   </ItemGroup>
 </Project>
