--- a/SolidOpt/trunk/src/Services/Transformations/CodeModel/ControlFlowGraph/SolidOpt.Services.ControlFlowGraph.csproj
+++ b/SolidOpt/trunk/src/Services/Transformations/CodeModel/ControlFlowGraph/SolidOpt.Services.ControlFlowGraph.csproj
@@ -30,11 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="src\CfgNode.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="src\ControlFlowGraph.cs" />
-    <Compile Include="src\Node.cs" />
-    <Compile Include="src\Nodes.cs" />
+    <Compile Include="src\BasicBlock.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\vendors\Mono.Cecil\Mono.Cecil.csproj">
