Treat the FlowControl.Call as FlowControl.Next Implement iterative ControlFlowGraph dumper Update the test to have predecessors as well

--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SimpleIf.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SimpleIf.il.cfg
@@ -9,10 +9,14 @@ block 0:
 block 1:
 	body:
 		IL_0004: ldstr "x > y"
-		IL_0009: call void System.Console::WriteLine(string)
+		IL_0009: call System.Void System.Console::WriteLine(System.String)
 	successors:
 		block 2
+	predecessor:
+		block 0
 block 2:
 	body:
 		IL_000e: ret
-
+	predecessor:
+		block 0
+		block 1
