--- a/Tools/SolidReflector/trunk/src/SolidReflector.csproj
+++ b/Tools/SolidReflector/trunk/src/SolidReflector.csproj
@@ -58,6 +58,7 @@
       <Package>gtk-sharp-2.0</Package>
     </Reference>
     <Reference Include="Mono.Posix" />
+    <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="gtk-gui\gui.stetic">
