Integrate SolidOpt.mdpolicy in Solution. All project inherits policy from solution.

--- a/SolidOpt/trunk/doc/Demos/Decompiler/Decompiler.csproj
+++ b/SolidOpt/trunk/doc/Demos/Decompiler/Decompiler.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -41,10 +41,6 @@
     <ProjectReference Include="..\..\..\src\Services\SolidOpt.Services.csproj">
       <Project>{c41b5fb4-dae9-4a27-9d15-55109ab79660}</Project>
       <Name>SolidOpt.Services</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\src\Services\Transformations\CodeModel\ControlFlowGraph\SolidOpt.Services.ControlFlowGraph.csproj">
-      <Project>{43A760A8-E789-4E27-A3C3-182CD847D07C}</Project>
-      <Name>SolidOpt.Services.ControlFlowGraph</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\..\src\Services\Transformations\CodeModel\ControlFlowGraph\SolidOpt.Services.ControlFlowGraph.csproj">
       <Project>{43A760A8-E789-4E27-A3C3-182CD847D07C}</Project>
