--- a/SolidOpt/trunk/doc/Demos/Optimization Methods/Inline/Inline.csproj
+++ b/SolidOpt/trunk/doc/Demos/Optimization Methods/Inline/Inline.csproj
@@ -1,4 +1,5 @@
-﻿<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ProjectGuid>{0DE92B60-3D0C-4E87-BE2A-32913A172FFD}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -9,6 +10,8 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <SourceAnalysisOverrideSettingsFile>C:\Documents and Settings\Sasho\Application Data\ICSharpCode/SharpDevelop3.0\Settings.SourceAnalysis</SourceAnalysisOverrideSettingsFile>
+    <ProductVersion>9.0.21022</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <OutputPath>bin\Debug\</OutputPath>
@@ -25,6 +28,12 @@
     <Optimize>True</Optimize>
     <CheckForOverflowUnderflow>False</CheckForOverflowUnderflow>
     <DefineConstants>TRACE</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <ItemGroup>
@@ -46,23 +55,6 @@
     <Compile Include="src\Program.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="src" />
-    <ProjectReference Include="..\..\..\..\src\Services\SolidOpt.Services.csproj">
-      <Project>{c41b5fb4-dae9-4a27-9d15-55109ab79660}</Project>
-      <Name>SolidOpt.Services</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\src\Services\Transformations\Optimizations\IL\MethodInline\SolidOpt.Services.MethodInline.csproj">
-      <Project>{9DFD76F4-C25D-4AB8-BC5F-ED932767B84D}</Project>
-      <Name>SolidOpt.Services.MethodInline</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\src\Services\Transformations\Optimizations\SolidOpt.Services.Optimizations.csproj">
-      <Project>{cccc9966-8ceb-4451-8ad4-fe48d7ad04bb}</Project>
-      <Name>SolidOpt.Services.Optimizations</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\..\src\Services\Transformations\SolidOpt.Services.Transformations.csproj">
-      <Project>{6ea875ad-4277-4ef6-8d5c-03a0995db7fd}</Project>
-      <Name>SolidOpt.Services.Transformations</Name>
-    </ProjectReference>
     <ProjectReference Include="..\..\..\..\src\vendors\Cecil.Decompiler\Cecil.Decompiler\Cecil.Decompiler.csproj">
       <Project>{ED1BE103-1699-4116-A732-616BEB142EB2}</Project>
       <Name>Cecil.Decompiler</Name>
