--- a/SolidOpt/trunk/src/Services/WebServices/RealTimeOpt/demo/SolidOptWebServiceClient/SolidOptWebServiceClient.csproj
+++ b/SolidOpt/trunk/src/Services/WebServices/RealTimeOpt/demo/SolidOptWebServiceClient/SolidOptWebServiceClient.csproj
@@ -1,4 +1,5 @@
-﻿<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<?xml version="1.0" encoding="utf-8"?>
+<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <ProjectGuid>{ED08E9DA-EFFC-4922-8D76-35FC9671A381}</ProjectGuid>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -9,6 +10,8 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <SourceAnalysisOverrideSettingsFile>C:\Documents and Settings\Sasho\Application Data\ICSharpCode/SharpDevelop3.0\Settings.SourceAnalysis</SourceAnalysisOverrideSettingsFile>
+    <ProductVersion>9.0.21022</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
     <OutputPath>bin\Debug\</OutputPath>
@@ -25,6 +28,12 @@
     <Optimize>True</Optimize>
     <CheckForOverflowUnderflow>False</CheckForOverflowUnderflow>
     <DefineConstants>TRACE</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <ItemGroup>
@@ -61,9 +70,8 @@
     <WebReferences Include="Web References\" />
     <WebReferenceUrl Include="http://www.solidopt.org/ws/SolidOptService.asmx">
       <UrlBehavior>Static</UrlBehavior>
-      <UpdateFromURL>http://www.solidopt.org/ws/SolidOptService.asmx</UpdateFromURL>
       <RelPath>Web References\www.solidopt.org</RelPath>
-      <Namespace>SolidOptWebServiceClient.www.solidopt.org</Namespace>
+      <UpdateFromURL>http://www.solidopt.org/ws/SolidOptService.asmx</UpdateFromURL>
     </WebReferenceUrl>
   </ItemGroup>
 </Project>
