Print out the IL code of the MainClass.Main method.

--- a/Tools/SolidReflector/trunk/src/SolidReflector.csproj
+++ b/Tools/SolidReflector/trunk/src/SolidReflector.csproj
@@ -70,4 +70,10 @@
   <ItemGroup>
     <Folder Include="Properties\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\..\SolidOpt\vendors\Mono.Cecil\v0.9.3\Mono.Cecil.csproj">
+      <Project>{D68133BD-1E63-496E-9EDE-4FBDBF77B486}</Project>
+      <Name>Mono.Cecil</Name>
+    </ProjectReference>
+  </ItemGroup>
 </Project>
