Added SimpleWhile test Improved the testing mechanism - now we compare the seen and the expected results line by line and we trim the leading and trailing spaces and improved error message reporting.

--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/SolidOpt.Services.ILtoCFG.Test.csproj
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/SolidOpt.Services.ILtoCFG.Test.csproj
@@ -38,6 +38,8 @@
     <None Include="test\TestCases\Empty.il" />
     <None Include="test\TestCases\SimpleIf.il" />
     <None Include="test\TestCases\SimpleIf.il.cfg" />
+    <None Include="test\TestCases\SimpleWhile.il" />
+    <None Include="test\TestCases\SimpleWhile.il.cfg" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="test\CFGTestFixture.cs" />
