--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/SolidOpt.Services.ILtoCFG.Test.csproj
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/SolidOpt.Services.ILtoCFG.Test.csproj
@@ -40,6 +40,8 @@
     <None Include="test\TestCases\SimpleIf.il.cfg" />
     <None Include="test\TestCases\SimpleWhile.il" />
     <None Include="test\TestCases\SimpleWhile.il.cfg" />
+    <None Include="test\TestCases\SimpleSwitch.il" />
+    <None Include="test\TestCases\SimpleSwitch.il.cfg" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="test\CFGTestFixture.cs" />
