Fixed to search for keyword 'predecessors' instead of 'predecessor' in the .il.cfg files and fixed all affected tests to use the new keyword

--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SimpleIf.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SimpleIf.il.cfg
@@ -12,11 +12,11 @@ block 1:
 		IL_0009: call System.Void System.Console::WriteLine(System.String)
 	successors:
 		block 2
-	predecessor:
+	predecessors:
 		block 0
 block 2:
 	body:
 		IL_000e: ret
-	predecessor:
+	predecessors:
 		block 0
 		block 1
