--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SimpleSwitch.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SimpleSwitch.il.cfg
@@ -22,7 +22,7 @@ block 1:
     IL_0024: br.s IL_004d
   successors:
     block 5
-  predecessor:
+  predecessors:
     block 0
 block 2:
   body:
@@ -32,7 +32,7 @@ block 2:
     IL_0031: br.s IL_004d
   successors:
     block 5
-  predecessor:
+  predecessors:
     block 0
 block 3:
   body:
@@ -42,7 +42,7 @@ block 3:
     IL_003e: br.s IL_004d
   successors:
     block 5
-  predecessor:
+  predecessors:
     block 0
 block 4:
   body:
@@ -52,12 +52,12 @@ block 4:
     IL_004b: br.s IL_004d
   successors:
     block 5
-  predecessor:
+  predecessors:
     block 0
 block 5:
   body:
     IL_004d: ret
-  predecessor:
+  predecessors:
     block 1
     block 2
     block 3
