--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SimpleWhile.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SimpleWhile.il.cfg
@@ -9,7 +9,7 @@ block 0:
 block 1:
     body:
         IL_0005: nop
-      IL_0006: ldloca.s V_0 hhh
+      IL_0006: ldloca.s V_0
         IL_0008: call System.String System.Int32::ToString()
         IL_000d: call System.Void System.Console::WriteLine(System.String)
         IL_0012: nop
@@ -20,7 +20,7 @@ block 1:
         IL_0017: nop
     successors:
         block 2
-    predecessor:
+    predecessors:
         block 2
 block 2:
     body:
@@ -33,11 +33,11 @@ block 2:
     successors:
         block 1
         block 3
-    predecessor:
+    predecessors:
         block 0
         block 1
 block 3:
     body:
         IL_0020: ret
-    predecessor:
+    predecessors:
         block 2
