--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TryFinallyExceptionFinallyAtEnd.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TryFinallyExceptionFinallyAtEnd.il.cfg
@@ -8,22 +8,22 @@ block 0:
     IL_0005: ldloc.1
     IL_0006: div
     IL_0007: stloc.0
-    IL_0008: leave IL_0018
+    IL_0008: leave IL_000d
   successors:
     block 1
     block 2
 block 1:
   body:
-    IL_000d: ldstr "Finally..."
-    IL_0012: call System.Void System.Console::WriteLine(System.String)
-    IL_0017: endfinally
-  successors:
-    block 2
+    IL_000d: ret
   predecessors:
     block 0
+    block 2
 block 2:
   body:
-    IL_0018: ret
+    IL_000e: ldstr "Finally..."
+    IL_0013: call System.Void System.Console::WriteLine(System.String)
+    IL_0018: endfinally
+  successors:
+    block 1
   predecessors:
     block 0
-    block 1
