--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TryFinallyExceptionWithNops.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TryFinallyExceptionWithNops.il.cfg
@@ -8,22 +8,26 @@ block 0:
     IL_0005: ldloc.1
     IL_0006: div
     IL_0007: stloc.0
-    IL_0008: leave IL_0018
+    IL_0008: leave IL_001a
   successors:
-    block 1
     block 2
+    block 3
 block 1:
   body:
-    IL_000d: ldstr "Finally..."
-    IL_0012: call System.Void System.Console::WriteLine(System.String)
-    IL_0017: endfinally
-  successors:
-    block 2
-  predecessors:
-    block 0
+    IL_000d: nop
+    IL_000e: nop
 block 2:
   body:
-    IL_0018: ret
+    IL_000f: ldstr "Finally..."
+    IL_0014: call System.Void System.Console::WriteLine(System.String)
+    IL_0019: endfinally
+  successors:
+    block 3
   predecessors:
     block 0
-    block 1
+block 3:
+  body:
+    IL_001a: ret
+  predecessors:
+    block 0
+    block 2
