Add app.config, which should be used to tune up the application. Currently we need the app.config when we want to use Debug.Assert for showing a popup without need to attach listeners every time.

--- a/Tools/DataMorphose/trunk/src/DataMorphose.csproj
+++ b/Tools/DataMorphose/trunk/src/DataMorphose.csproj
@@ -72,5 +72,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Model\Database.cs" />
+    <None Include="Properties\app.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
