Extend the text database with new logically connected tables. Extend the tests for each table with the following checks: number of columns, number of rows, name and isNotNull.

--- a/Tools/DataMorphose/trunk/test/DataMorphose.Test.csproj
+++ b/Tools/DataMorphose/trunk/test/DataMorphose.Test.csproj
@@ -43,8 +43,14 @@
     <Folder Include="DemoDB\Text\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="DemoDB\Text\Users.txt" />
-    <None Include="DemoDB\Text\UserDetails.txt" />
+    <None Include="DemoDB\Text\Categories.txt" />
+    <None Include="DemoDB\Text\Employees.txt" />
+    <None Include="DemoDB\Text\Orders.txt" />
+    <None Include="DemoDB\Text\Products.txt" />
+    <None Include="DemoDB\Text\Customers.txt" />
+    <None Include="DemoDB\Text\Shippers.txt" />
+    <None Include="DemoDB\Text\Suppliers.txt" />
+    <None Include="DemoDB\Text\OrderDetails.txt" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\src\DataMorphose.csproj">
