--- a/Tools/DataMorphose/trunk/test/DataMorphose.Test.csproj
+++ b/Tools/DataMorphose/trunk/test/DataMorphose.Test.csproj
@@ -51,6 +51,7 @@
     <None Include="DemoDB\Text\Shippers.txt" />
     <None Include="DemoDB\Text\Suppliers.txt" />
     <None Include="DemoDB\Text\OrderDetails.txt" />
+    <None Include="DemoDB\Text\Demo.txtdb" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\src\DataMorphose.csproj">
