Modified so that endfinally/endfilter instructions create successor

--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/CatchTwoFiltersException.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/CatchTwoFiltersException.il.cfg
@@ -13,6 +13,8 @@ block 1:
     IL_000e: pop
     IL_000f: ldc.i4.0
     IL_0010: endfilter
+  successors:
+    block 2
 block 2:
   body:
     IL_0012: ldc.i4.1
@@ -20,11 +22,15 @@ block 2:
     IL_0018: leave IL_002c
   successors:
     block 5
+  predecessors:
+    block 1
 block 3:
   body:
     IL_001d: pop
     IL_001e: ldc.i4.1
     IL_001f: endfilter
+  successors:
+    block 4
 block 4:
   body:
     IL_0021: ldc.i4.1
@@ -32,6 +38,8 @@ block 4:
     IL_0027: leave IL_002c
   successors:
     block 5
+  predecessors:
+    block 3
 block 5:
   body:
     IL_002c: ldsfld System.Int32 TestCase::exc_not_thrown
