--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/CatchFaultException.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/CatchFaultException.il.cfg
@@ -17,6 +17,8 @@ block 2:
     IL_001a: ldc.i4.1
     IL_001b: stsfld System.Int32 TestCase::flt_caught
     IL_0020: endfinally
+  successors:
+    block 3
 block 3:
   body:
     IL_0021: ldsfld System.Int32 TestCase::exc_caught
@@ -27,6 +29,7 @@ block 3:
   predecessors:
     block 0
     block 1
+    block 3
 block 4:
   body:
     IL_002b: ldsfld System.Int32 TestCase::flt_caught
