--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/CatchFilterException.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/CatchFilterException.il.cfg
@@ -13,6 +13,8 @@ block 1:
     IL_000e: pop
     IL_000f: ldc.i4.1
     IL_0010: endfilter
+  successors:
+    block 2
 block 2:
   body:
     IL_0012: ldc.i4.1
@@ -20,6 +22,8 @@ block 2:
     IL_0018: leave IL_001d
   successors:
     block 3
+  predecessors:
+    block 1
 block 3:
   body:
     IL_001d: ldsfld System.Int32 TestCase::exc_not_thrown
