--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TryCatchFinallyException.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/TryCatchFinallyException.il.cfg
@@ -24,9 +24,12 @@ block 2:
     IL_001d: ldstr "finally keyword reached"
     IL_0022: call System.Void System.Console::WriteLine(System.String)
     IL_0027: endfinally
+  successors:
+    block 3
 block 3:
   body:
     IL_0028: ret
   predecessors:
     block 0
     block 1
+    block 2
