Added block kind to tests that contain only full cfg blocks

--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/BoolAndGreaterOrEqualThan.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/BoolAndGreaterOrEqualThan.il.cfg
@@ -1,4 +1,5 @@
 block 0:
+  kind: full
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldstr "A"
@@ -8,6 +9,7 @@ block 0:
 		block 2
 		block 1
 block 1:
+  kind: full
 	body:
 		IL_000d: ldarg.0
 		IL_000e: callvirt System.Int32 System.String::get_Length()
@@ -21,6 +23,7 @@ block 1:
   predecessors:
     block 0
 block 2:
+  kind: full
 	body:
 		IL_001b: ldc.i4.0
 	successors:
@@ -28,6 +31,7 @@ block 2:
   predecessors:
     block 0
 block 3:
+  kind: full
 	body:
 		IL_001c: stloc.0
 		IL_001d: br.s IL_001f
@@ -37,6 +41,7 @@ block 3:
     block 1
     block 2
 block 4:
+  kind: full
 	body:
 		IL_001f: ldloc.0
 		IL_0020: ret
