--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/MixedAndOr.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/MixedAndOr.il.cfg
@@ -1,4 +1,5 @@
 block 0:
+  kind: full
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldc.i4.3
@@ -7,6 +8,7 @@ block 0:
 		block 2
 		block 1
 block 1:
+  kind: full
 	body:
 		IL_0004: ldarg.0
 		IL_0005: ldc.i4.s 42
@@ -17,6 +19,7 @@ block 1:
   predecessors:
     block 0
 block 2:
+  kind: full
 	body:
 		IL_0009: ldarg.0
 		IL_000a: ldc.i4.s 100
@@ -28,6 +31,7 @@ block 2:
     block 0
     block 1
 block 3:
+  kind: full
 	body:
 		IL_0010: ldc.i4.1
 	successors:
@@ -35,6 +39,7 @@ block 3:
   predecessors:
     block 1
 block 4:
+  kind: full
 	body:
 		IL_0011: stloc.0
 		IL_0012: br.s IL_0014
@@ -44,6 +49,7 @@ block 4:
     block 2
     block 3
 block 5:
+  kind: full
 	body:
 		IL_0014: ldloc.0
 		IL_0015: ret
