--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/MultipleOr.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/MultipleOr.il.cfg
@@ -1,4 +1,5 @@
 block 0:
+  kind: full
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldc.i4.3
@@ -7,6 +8,7 @@ block 0:
 		block 4
 		block 1
 block 1:
+  kind: full
 	body:
 		IL_0004: ldarg.0
 		IL_0005: ldc.i4.5
@@ -17,6 +19,7 @@ block 1:
   predecessors:
     block 0
 block 2:
+  kind: full
 	body:
 		IL_0008: ldarg.0
 		IL_0009: ldc.i4.s 42
@@ -27,6 +30,7 @@ block 2:
   predecessors:
     block 1
 block 3:
+  kind: full
 	body:
 		IL_000d: ldarg.0
 		IL_000e: ldc.i4.s 100
@@ -37,6 +41,7 @@ block 3:
   predecessors:
     block 2
 block 4:
+  kind: full
 	body:
 		IL_0014: ldc.i4.1
 	successors:
@@ -46,6 +51,7 @@ block 4:
     block 1
     block 2
 block 5:
+  kind: full
 	body:
 		IL_0015: stloc.0
 		IL_0016: br.s IL_0018
@@ -55,6 +61,7 @@ block 5:
     block 3
     block 4
 block 6:
+  kind: full
 	body:
 		IL_0018: ldloc.0
 		IL_0019: ret
