--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/StringPredicate.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/StringPredicate.il.cfg
@@ -1,4 +1,5 @@
 block 0:
+  kind: full
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldstr "foo"
@@ -8,6 +9,7 @@ block 0:
 		block 2
 		block 1
 block 1:
+  kind: full
 	body:
 		IL_000d: ldarg.0
 		IL_000e: ldstr "bar"
@@ -18,6 +20,7 @@ block 1:
   predecessors:
     block 0
 block 2:
+  kind: full
 	body:
 		IL_001a: ldc.i4.1
 	successors:
@@ -25,6 +28,7 @@ block 2:
   predecessors:
     block 0
 block 3:
+  kind: full
 	body:
 		IL_001b: stloc.0
 		IL_001c: br.s IL_001e
@@ -34,6 +38,7 @@ block 3:
     block 1
     block 2
 block 4:
+  kind: full
 	body:
 		IL_001e: ldloc.0
 		IL_001f: ret
