--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/ThreeReturns.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/ThreeReturns.il.cfg
@@ -1,4 +1,5 @@
 block 0:
+  kind: full
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldarg.1
@@ -7,6 +8,7 @@ block 0:
 		block 2
 		block 1
 block 1:
+  kind: full
 	body:
 		IL_0004: ldc.i4.1
 		IL_0005: stloc.0
@@ -16,6 +18,7 @@ block 1:
   predecessors:
     block 0
 block 2:
+  kind: full
 	body:
 		IL_0008: ldarg.0
 		IL_0009: ldarg.1
@@ -26,6 +29,7 @@ block 2:
   predecessors:
     block 0
 block 3:
+  kind: full
 	body:
 		IL_000c: ldc.i4.1
 		IL_000d: stloc.0
@@ -35,6 +39,7 @@ block 3:
   predecessors:
     block 2
 block 4:
+  kind: full
 	body:
 		IL_0010: ldc.i4.0
 		IL_0011: stloc.0
@@ -44,6 +49,7 @@ block 4:
   predecessors:
     block 2
 block 5:
+  kind: full
 	body:
 		IL_0014: ldloc.0
 		IL_0015: ret
