--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/DoWhile.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/DoWhile.il.cfg
@@ -1,4 +1,5 @@
 block 0:
+  kind: full
   body:
     IL_0000: nop
     IL_0001: ldc.i4.5
@@ -6,6 +7,7 @@ block 0:
   successors:
     block 1
 block 1:
+  kind: full
   body:
     IL_0003: nop
     IL_0004: ldloca.s V_0
@@ -30,6 +32,7 @@ block 1:
     block 0
     block 1
 block 2:
+  kind: full
   body:
     IL_001e: ret
   predecessors:
