--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/FieldAccessor.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/FieldAccessor.il.cfg
@@ -1,4 +1,5 @@
 block 0:
+  kind: full
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldfld System.Int32 TestCase::_field
@@ -7,6 +8,7 @@ block 0:
 	successors:
 		block 1
 block 1:
+  kind: full
 	body:
 		IL_0009: ldloc.0
 		IL_000a: ret
