--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/MultipleAndOr.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/MultipleAndOr.il.cfg
@@ -1,4 +1,5 @@
 block 0:
+  kind: full
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldc.i4.3
@@ -7,6 +8,7 @@ block 0:
 		block 2
 		block 1
 block 1:
+  kind: full
 	body:
 		IL_0004: ldarg.0
 		IL_0005: ldc.i4.s 42
@@ -17,6 +19,7 @@ block 1:
   predecessors:
     block 0
 block 2:
+  kind: full
 	body:
 		IL_0009: ldarg.0
 		IL_000a: ldc.i4.s 100
@@ -28,6 +31,7 @@ block 2:
     block 0
     block 1
 block 3:
+  kind: full
 	body:
 		IL_000e: ldarg.0
 		IL_000f: ldc.i4.s 115
@@ -38,6 +42,7 @@ block 3:
   predecessors:
     block 2
 block 4:
+  kind: full
 	body:
 		IL_0015: ldc.i4.0
 	successors:
@@ -45,6 +50,7 @@ block 4:
   predecessors:
     block 2
 block 5:
+  kind: full
 	body:
 		IL_0016: br.s IL_0019
 	successors:
@@ -53,6 +59,7 @@ block 5:
     block 3
     block 4
 block 6:
+  kind: full
 	body:
 		IL_0018: ldc.i4.1
 	successors:
@@ -60,6 +67,7 @@ block 6:
   predecessors:
     block 1
 block 7:
+  kind: full
 	body:
 		IL_0019: stloc.0
 		IL_001a: br.s IL_001c
@@ -69,6 +77,7 @@ block 7:
     block 5
     block 6
 block 8:
+  kind: full
 	body:
 		IL_001c: ldloc.0
 		IL_001d: ret
