--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/NotStringEquality.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/NotStringEquality.il.cfg
@@ -1,4 +1,5 @@
 block 0:
+  kind: full
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldstr "foo"
@@ -10,6 +11,7 @@ block 0:
 	successors:
 		block 1
 block 1:
+  kind: full
 	body:
 		IL_0011: ldloc.0
 		IL_0012: ret
