--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/OptimizedOr.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/OptimizedOr.il.cfg
@@ -1,4 +1,5 @@
 block 0:
+  kind: full
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldstr "foo"
@@ -8,6 +9,7 @@ block 0:
 		block 2
 		block 1
 block 1:
+  kind: full
 	body:
 		IL_000d: ldarg.0
 		IL_000e: ldstr "bar"
@@ -16,6 +18,7 @@ block 1:
   predecessors:
     block 0
 block 2:
+  kind: full
 	body:
 		IL_0019: ldc.i4.1
 		IL_001a: ret
