--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SimpleIf.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SimpleIf.il.cfg
@@ -1,4 +1,5 @@
 block 0:
+  kind: full
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldarg.1
@@ -7,6 +8,7 @@ block 0:
 		block 2
 		block 1
 block 1:
+  kind: full
 	body:
 		IL_0004: ldstr "x > y"
 		IL_0009: call System.Void System.Console::WriteLine(System.String)
@@ -15,6 +17,7 @@ block 1:
 	predecessors:
 		block 0
 block 2:
+  kind: full
 	body:
 		IL_000e: ret
 	predecessors:
