--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SimpleReturn.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SimpleReturn.il.cfg
@@ -1,4 +1,5 @@
 block 0:
+  kind: full
 	body:
 		IL_0000: ldc.i4.1
 		IL_0001: stloc.0
@@ -6,6 +7,7 @@ block 0:
 	successors:
 		block 1
 block 1:
+  kind: full
 	body:
 		IL_0004: ldloc.0
 		IL_0005: ret
