--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SingleOr.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/SingleOr.il.cfg
@@ -1,4 +1,5 @@
 block 0:
+  kind: full
 	body:
 		IL_0000: ldarg.0
 		IL_0001: ldc.i4.3
@@ -7,6 +8,7 @@ block 0:
 		block 2
 		block 1
 block 1:
+  kind: full
 	body:
 		IL_0004: ldarg.0
 		IL_0005: ldc.i4.5
@@ -17,6 +19,7 @@ block 1:
   predecessors:
     block 0
 block 2:
+  kind: full
 	body:
 		IL_000a: ldc.i4.1
 	successors:
@@ -24,6 +27,7 @@ block 2:
   predecessors:
     block 0
 block 3:
+  kind: full
 	body:
 		IL_000b: stloc.0
 		IL_000c: br.s IL_000e
@@ -33,6 +37,7 @@ block 3:
     block 1
     block 2
 block 4:
+  kind: full
 	body:
 		IL_000e: ldloc.0
 		IL_000f: ret
