--- a/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/Switch.il.cfg
+++ b/SolidOpt/trunk/src/Services/Transformations/Multimodel/ILtoCFG/test/TestCases/Switch.il.cfg
@@ -1,4 +1,5 @@
 block 0:
+  kind: full
 	body:
 		IL_0000: nop
     IL_0001: ldc.i4.2
@@ -15,6 +16,7 @@ block 0:
     block 4
     block 1
 block 1:
+  kind: full
   body:
     IL_001d: br.s IL_0046
   successors:
@@ -22,6 +24,7 @@ block 1:
   predecessors:
     block 0
 block 2:
+  kind: full
   body:
     IL_001f: ldstr "Case 1"
     IL_0024: call System.Void System.Console::WriteLine(System.String)
@@ -32,6 +35,7 @@ block 2:
   predecessors:
     block 0
 block 3:
+  kind: full
   body:
     IL_002c: ldstr "Case 2 or 3"
     IL_0031: call System.Void System.Console::WriteLine(System.String)
@@ -42,6 +46,7 @@ block 3:
   predecessors:
     block 0
 block 4:
+  kind: full
   body:
     IL_0039: ldstr "Case 4"
     IL_003e: call System.Void System.Console::WriteLine(System.String)
@@ -52,6 +57,7 @@ block 4:
   predecessors:
     block 0
 block 5:
+  kind: full
   body:
     IL_0046: ret
   predecessors:
